# BackendChallengeTimCorey

./: .gitignore  Pipfile  README.org  database.org  pyproject.toml  requirements.txt
backendProject/: __init__.py  db.py  insert_data.sql  schema.sql
backendProject/static/: style.css
backendProject/templates/: base.html
backendProject/templates/auth/: login.html  register.html
backendProject/templates/blog/: index.html
backendProject/templates/buy/: buy_product.html  index.html
backendProject/views/: auth.py  blog.py  buy.py
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_buy.py  test_db.py  test_factory.py
